Agora temos a arquitetura dos modelos de pagamento